fixed alignment of main share button

--- a/style.css
+++ b/style.css
@@ -83,11 +83,11 @@ p, .card-info {
     background-color: var(--light-grayish-blue);
     width: 30px;
     height: 30px;
-    margin-left: 50px;
+    margin-left: 69px;
     border-radius: 20px;
     border: 1px solid var(--light-grayish-blue);
     position: relative;
-    top: 5px;
+    top: 12px;
 }
 
 /*share panel start with animation*/
